[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat-client"
version = "0.3.4"
description = "CLI client for the heartbeat-backend service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "cryptography>=41.0.0"
]

[project.scripts]
hbclient = "heartbeat_client.hbclient:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
