[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-client"
version = "0.5.1"
description = "Secure heartbeat client for the Nuclei monitoring ecosystem"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "J. Will Pierce", email = "willp@users.noreply.github.com"},
]
keywords = ["heartbeat", "monitoring", "nuclei", "client", "heartbeat-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "cryptography>=41.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "twine>=5.1.0",
]
typecheck = [
    "mypy>=1.11.0",
]
release = [
    "commitizen>=3.29.0",
]

[project.urls]
Homepage      = "https://github.com/willp/heartbeat-client"
Repository    = "https://github.com/willp/heartbeat-client"
Documentation = "https://github.com/willp/heartbeat-client/blob/main/README.md"
Issues        = "https://github.com/willp/heartbeat-client/issues"
Changelog     = "https://github.com/willp/heartbeat-client/blob/main/CHANGELOG.md"

[project.scripts]
hbclient = "hb_client.hbclient:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hb_client*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
